--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ can ask questions and seek support from other community members.</p>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/OlgaBorovik">Olga Borovik</a>.
   </div>
 </main>
 </body>
