--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
   <main>
 
+  <section>
+
   
 <div class="container">
 <h1  class="heading">FAQs</h1>
@@ -79,7 +81,7 @@ can ask questions and seek support from other community members.</p>
 </div>
   
   
-
+</section>
 
 
 
